Vertical align fix

--- a/css/crowdVoice.css
+++ b/css/crowdVoice.css
@@ -38,7 +38,6 @@
 .crowd-voice_text-add {
   display: none;
   /* Hidden before activation */
-
   margin-top: 7px;
 }
 .crowd-voice_text-add_editor {
@@ -70,7 +69,7 @@
   left: 50%;
   max-width: 90%;
   background-color: #FFF;
-  margin-top: -21px;
+  margin-top: -15px;
   -webkit-transform: translate(-50%);
   -o-transform: translate(-50%);
   transform: translate(-50%);
